chore: 패턴 및 필인 연습 페이지 UI 수정

--- a/frontend/assets/web/index.html
+++ b/frontend/assets/web/index.html
@@ -14,6 +14,7 @@
       }
 
       #osmdCanvas canvas{
+        width: auto;
         position: absolute;
         pointer-events: none; /* UI 클릭 방지 */
       }
@@ -24,6 +25,6 @@
     </style>
   </head>
   <body>
-    <div id="osmdCanvas"></div>
+    <div id="osmdCanvas", style="width: auto;"></div>
   </body>
 </html>
