feat: 1차 채점 악보 결과 생성 기능 개발 진행 중

--- a/frontend/assets/web/index.html
+++ b/frontend/assets/web/index.html
@@ -5,6 +5,7 @@
     <title>Drum Sheet Viewer</title>
     <script src="./js/opensheetmusicdisplay.min.js"></script>
     <script src="./js/fileSelectAndLoadOSMD.js"></script>
+    <script type="module" src="./js/detailedScoreRenderer.js"></script>
     <style>
       body {
         margin: 0 auto;
@@ -26,5 +27,6 @@
   </head>
   <body>
     <div id="osmdCanvas", style="width: auto;"></div>
+    <div id="detailedOsmd" style="width:100%; height:auto; display:none;"></div>
   </body>
 </html>
