--- a/frontend/assets/web/index.html
+++ b/frontend/assets/web/index.html
@@ -5,12 +5,11 @@
     <title>Drum Sheet Viewer</title>
     <script src="./js/opensheetmusicdisplay.min.js"></script>
     <script src="./js/fileSelectAndLoadOSMD.js"></script>
-    <script type="module" src="./js/detailedScoreRenderer.js"></script>
+    <script src="./js/detailedScoreRenderer.js"></script>
     <style>
       body {
         margin: 0 auto;
         padding: 0;
-        overflow: hidden;
         background-color: white;
       }
 
@@ -18,6 +17,14 @@
         width: auto;
         position: absolute;
         pointer-events: none; /* UI 클릭 방지 */
+        overflow: hidden;
+      }
+
+      /* 초기엔 detailedOsmd(상세) 숨기기 */
+      #detailedOsmd {
+        display: none;
+        overflow-y: auto;
+        padding-top: 40px;
       }
       
       .osmd-cursor {
@@ -27,6 +34,6 @@
   </head>
   <body>
     <div id="osmdCanvas", style="width: auto;"></div>
-    <div id="detailedOsmd" style="width:100%; height:auto; display:none;"></div>
+    <div id="detailedOsmd" style="width:100%; height:auto;"></div>
   </body>
 </html>
